fix (maps): set z-index to 0 instead of "unset" to fix marker popups rendered behind map.

--- a/styles/extension-Maps.scss
+++ b/styles/extension-Maps.scss
@@ -1,3 +1,3 @@
 div.leaflet-pane, div.leaflet-top, div.leaflet-bottom, div.leaflet-control {
-  z-index: unset;
+  z-index: 0;
 }
